--- a/views/frontend/cmdownload/meta/support-thread-list.phtml
+++ b/views/frontend/cmdownload/meta/support-thread-list.phtml
@@ -14,6 +14,7 @@ if (!empty($items)) {
     }
 }
 else { ?>
-        <tr><td colspan="4">No topics, would you like to create one?</td></tr>
+        <tr><td colspan="4">No topics, 	<?  if ( is_user_logged_in() ) {  ?> 
+    would you like to create one?<? } ?></td></tr>
 <?php }
 ?>
