--- a/views/frontend/cmdownload/meta/support.phtml
+++ b/views/frontend/cmdownload/meta/support.phtml
@@ -29,6 +29,7 @@ $currentPage = 1;
 <!--/paging -->
 <script>
 </script>
+<?  if ( is_user_logged_in() ) {  ?>     
 <div class="boxWhite694">
     <form id="addThreadForm" action="<?php the_permalink($post->ID); ?>/topic/add" method="post" style="position:relative">
         <h5>Leave your comment/question</h5>
@@ -45,6 +46,7 @@ $currentPage = 1;
         <button class="butPost">Post &gt;</button>
     </form>
 </div>
+<? } ?>
 <script>
     var totalSupportPages = <?php echo $pages; ?>;
     jQuery(document).ready(function($) {
