changes to version 1.2
git-svn-id: https://plugins.svn.wordpress.org/cm-download-manager/trunk@723400 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/views/frontend/cmdownload/categories.phtml
+++ b/views/frontend/cmdownload/categories.phtml
@@ -1,7 +1,7 @@
 <div class="CMDM">
 <table class="searchResList">
     <?php $total = CMDM_GroupDownloadPage::getTotalCount(); ?>
-    <tr><td><a href="<?php echo CMDM_get_url('downloads', ''); ?>">All Downloads</a> (<?php echo $total; ?>)</td>
+    <tr><td><a href="<?php echo CMDM_get_url('cmdownloads', ''); ?>"><?php _e('All Downloads', 'cm-download-manager'); ?></a> (<?php echo $total; ?>)</td>
     <?php
     ob_start();
     $categories = CMDM_GroupDownloadPage::getMainCategories(false, true);
