--- a/views/frontend/cmdownload/meta/download-form.phtml
+++ b/views/frontend/cmdownload/meta/download-form.phtml
@@ -9,6 +9,6 @@
 <form method="post" class="CMDM-downloadForm" action="<?php echo $action_url; ?>">
     <input type="hidden" name="_wpnonce" value="<?php echo $nonce; ?>" />
     <input type="hidden" name="id" value="<?php echo $download_id; ?>" />
-    <a href="#"  class="downloadBut">Download</a>
+    <a href="#"  class="downloadBut"><?php _e('Download', 'cm-download-manager'); ?></a>
     <input type="submit" value="Download"  style="display:none"/>
 </form>
