--- a/views/frontend/cmdownload/meta/edit-link.phtml
+++ b/views/frontend/cmdownload/meta/edit-link.phtml
@@ -1,1 +1,1 @@
-<span class="edit-link"><a href="<?php echo $url; ?>">Edit</a></span>
+<span class="edit-link"><a href="<?php echo $url; ?>"><?php _e('Edit', 'cm-download-manager'); ?></a></span>
