--- a/views/frontend/cmdownload/meta/rating.phtml
+++ b/views/frontend/cmdownload/meta/rating.phtml
@@ -5,7 +5,7 @@
             <?php
             for ($i = 5; $i > 0; $i--):
                 ?>
-                <input type="radio" id="star<?php echo $i; ?>" name="rating" value="<?php echo $i; ?>" <?php if ($avgRating == $i): ?>checked="checked"<?php endif; ?>/><label for="star<?php echo $i; ?>" title="<?php echo $i; ?> Stars"><?php echo $i; ?> Stars</label>
+                <input type="radio" id="star<?php echo $i; ?>" name="rating" value="<?php echo $i; ?>" <?php if ($avgRating == $i): ?>checked="checked"<?php endif; ?>/><label for="star<?php echo $i; ?>" title="<?php printf(__('%d Stars', 'cm-download-manager'), $i); ?>"><?php printf(__('%d Stars', 'cm-download-manager'), $i); ?></label>
             <?php endfor; ?>
         </fieldset>
       ​</form>
@@ -27,7 +27,7 @@ jQuery(document).ready(function($) {
     });
 });
 </script>
-<div id="CMDM-rating-message">Thanks for rating!</div>
+<div id="CMDM-rating-message"><?php _e('Thanks for rating!', 'cm-download-manager'); ?></div>
     <?php
 else:
     for ($i = 1; $i <= $avgRating; $i++) {
