--- a/views/frontend/cmdownload/single.phtml
+++ b/views/frontend/cmdownload/single.phtml
@@ -8,7 +8,7 @@ if (have_posts()):
         ?>
             <div class="CMDM-app">
                 <div class="rating"><?php do_action('CMDM_show_rating', get_the_id()); ?></div>
-                <div class="backtolib"><a href="<?php echo home_url('/cmdownloads'); ?>">&laquo;&nbsp;Back to All Downloads</a></div>
+                <div class="backtolib"><a href="<?php echo home_url('/cmdownloads'); ?>">&laquo;&nbsp;<?php _e('Back to All Downloads', 'cm-download-manager'); ?></a></div>
                 <h2><?php the_title(); ?></h2>
                 <!--/h2 -->
                 <div class="aside">
@@ -47,8 +47,8 @@ if (have_posts()):
                         </div>
                     <!--/searchResItems -->
                     <ul class="tabNav">
-                        <li class="on"><a href="#description">Description</a></li>
-                        <li><a href="#support">Support</a></li> 
+                        <li class="on"><a href="#description"><?php _e('Description', 'cm-download-manager'); ?></a></li>
+                        <li><a href="#support"><?php _e('Support', 'cm-download-manager'); ?></a></li> 
                     </ul>
                     <div class="boxGrey724">
                         <div class="tabItem">
