--- a/views/frontend/cmdownload/thread.phtml
+++ b/views/frontend/cmdownload/thread.phtml
@@ -8,7 +8,7 @@ if (have_posts()):
         ?>
             <div class="CMDM-app">
                 <div class="rating"><?php do_action('CMDM_show_rating', get_the_id()); ?></div>
-                <div class="backtolib"><a href="<?php echo home_url('/cmdownloads'); ?>">&laquo;&nbsp;Back to All Downloads</a></div>
+                <div class="backtolib"><a href="<?php echo home_url('/cmdownloads'); ?>">&laquo;&nbsp;<?php _e('Back to All Downloads', 'cm-download-manager'); ?></a></div>
                 <h2><?php the_title(); ?></h2>
                 <!--/h2 -->
                 <div class="aside">
@@ -27,8 +27,8 @@ if (have_posts()):
                                     <thead>
                                         <tr>
                                             <th colspan="2" class="CMDM_thread_title"><?php
-                                            if ($thread['resolved']): ?>[RESOLVED] <?php endif; ?>
-                                            <a class="CMDM_back_to_support" href="<?php the_permalink($post->ID); ?>#support">&laquo; Back to Support Page</a><br><?php echo $thread['title']; ?></th>
+                                            if ($thread['resolved']): ?>[<?php _e('RESOLVED', 'cm-download-manager'); ?>] <?php endif; ?>
+                                            <a class="CMDM_back_to_support" href="<?php the_permalink($post->ID); ?>#support">&laquo; <?php _e('Back to Support Page', 'cm-download-manager'); ?></a><br><?php echo $thread['title']; ?></th>
                                         </tr>
                                     </thead>
                                     <tbody id="threadTableContainer">
@@ -54,7 +54,7 @@ if (have_posts()):
                                                     <div class="CMDM_comment_author">
 													<?php 
 														if (get_comment_author($comment->comment_ID) == $thread['author']) echo '<span class="CMDM_author_color">'.get_comment_author($comment->comment_ID).'</span>'; 
-														elseif (get_comment_author($comment->comment_ID) == $author) echo get_comment_author($comment->comment_ID).' (Author)'; 
+														elseif (get_comment_author($comment->comment_ID) == $author) echo get_comment_author($comment->comment_ID).' ('.__('Author', 'cm-download-manager').')'; 
 														else  echo get_comment_author($comment->comment_ID); 
 													?>
 														</div>
@@ -71,20 +71,20 @@ if (have_posts()):
                         </div>
                         <div class="boxWhite694">
                             <form id="addCommentForm" action="<?php the_permalink($post->ID); ?>topic/<?php echo $thread['thread_id']; ?>/add" method="post" style="position:relative">
-                                <h5>Leave your comment</h5>
+                                <h5><?php _e('Leave your comment', 'cm-download-manager'); ?></h5>
                                 <ul class="CMDM_error" style="display:none"></ul>
                                                                 <ul class="notes">
-						<li>Allow markup: &lt;strong&gt;, &lt;em&gt;, &lt;a&gt;</li>
-                                                <li>Wrap your code using &lt;pre&gt;&lt;/pre&gt;</li>
+						<li><?php _e('Allow markup', 'cm-download-manager'); ?>: &lt;strong&gt;, &lt;em&gt;, &lt;a&gt;</li>
+                                                <li><?php _e('Wrap your code using', 'cm-download-manager'); ?> &lt;pre&gt;&lt;/pre&gt;</li>
 					</ul>
-                                <textarea name="thread_comment" cols="" rows="" placeholder="What is your comment about?"></textarea>
+                                <textarea name="thread_comment" cols="" rows="" placeholder="<?php _e('What is your comment about?', 'cm-download-manager'); ?>"></textarea>
                                 <label>
 						<input name="thread_notify" type="checkbox" value="1"/>
-						Notify me of follow</label>
+						<?php _e('Notify me of follow', 'cm-download-manager'); ?></label>
                                <?php if (!$thread['resolved']): ?><label>
 						<input name="thread_resolved" type="checkbox" value="1"/>
-						Mark this topic as resolved</label><?php endif; ?>
-                                <button class="butPost">Post &gt;</button>
+						<?php _e('Mark this topic as resolved', 'cm-download-manager'); ?></label><?php endif; ?>
+                                <button class="butPost"><?php _e('Post', 'cm-download-manager'); ?> &gt;</button>
                             </form>
                             <script type="text/javascript">
                                 function showNewComment(commentData) {
