--- a/views/frontend/error.phtml
+++ b/views/frontend/error.phtml
@@ -5,5 +5,5 @@
 
 <?php endforeach; ?>
 </ul>
-<a href="javascript:history.back(-1)">Go back to previous page</a>
+<a href="javascript:history.back(-1)"><?php _e('Go back to previous page', 'cm-download-manager'); ?></a>
 </div>
