--- a/views/frontend/cmdownload/single.phtml
+++ b/views/frontend/cmdownload/single.phtml
@@ -1,5 +1,7 @@
 <?php
+if (!isset($_GET['ajax'])):
 get_header();
+endif;
 ?><div class="CMDM"><?php
 if (have_posts()):
     while (have_posts()):
@@ -98,5 +100,6 @@ if (have_posts()):
     ?>
 <span class="cma_poweredby"><a href="http://www.cminds.com/" target="_new" class="cma_poweredbylink">CreativeMinds WordPress Plugin</a> <a href="http://www.cminds.com/plugins/cm-downloads/" target="_new" class="cma_poweredbylink">CM Downloads Manager</a></span>
 </div><?php
+if (!isset($_GET['ajax']))
 get_footer();
 ?>
