--- a/views/backend/pro.phtml
+++ b/views/backend/pro.phtml
@@ -7,15 +7,21 @@ This plugin adds many more features and functionality to <a title="CM Downloads"
 <h2>Features (Pro Version Only)</h2>
 <!--TODO-->
 <ul>
-<li><strong>Social Media Registration Integration</strong>- Integrates with Facebook &amp; Google+ &amp; LinkedIn (<a href="http://www.cminds.com/wp-content/uploads/edd/image1.png" target="new">image-1</a>) (<a href="http://www.cminds.com/wp-content/uploads/edd/cm-answers-image2.png" target="new">image-2</a>)</li>
-<li><strong>Shortcodes/Widgets</strong>- Generate top contributors, recent updates and most download items list</li>
-<li><strong>View Restriction</strong>- Define per each download if it is open to non logged in users and which user roles can view in case only logged-in are allowed. This can be set by Admin or Admin can give user ability to define (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-26-17.jpg">View image</a>) </Li>
-<li><strong>Password Protection</strong>- Protect download with password (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-33-08.jpg">View Image</a>)</li>
-<li><strong>Upload Restrictions</strong>- Define which user roles can create new downloads (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-39-35.jpg">View Download</a>)</Li>
-<li><strong>URL / Shortcode</strong>- Allow to include URL or shortcode in download page instead of uploading a file. This is useful for integration with other plugins and support checkout carts and selling downloads <a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-41-44.jpg">Example of EDD integration</a>) (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-44-14.jpg">Example of User Selection</a>)</Li>
-<li><strong>Related Downloads</strong>- Show Related downloads in download page (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-45-53.jpg">View Image</a>)</li>
-<li><strong>Downloads Page Tabs</strong>- Show more tabs for download descriptions in download page</Li>
-<li><strong>Search</strong>- Filter search results by date, downloads and username</li>
+<li><strong>Social Media Registration Integration</strong>- Integrates with Facebook &amp; Google+ &amp; LinkedIn: (<a href="http://www.cminds.com/wp-content/uploads/edd/image1.png" target="new">View Image 1</a>) (<a href="http://www.cminds.com/wp-content/uploads/edd/cm-answers-image2.png" target="new">View Image 2</a>)</li>
+<li><strong>Shortcodes/Widgets</strong>- Generate top contributors, recent updates and most download items list<br />
+<br><br />
+Top Downloads - CMDM-top-downloads count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM95.png" target="new">View Image</a>)<br><br />
+Frequent Contributers - CMDM-frequent-contributors count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM96.png" target="new">View Image</a>)<br><br />
+Recent Added Downloads - CMDM-recent-updates count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM98.png" target="new">View Image</a>)<br><br />
+Related Downloads - CMDM-related-downloads count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM97.png" target="new">View Image</a>)<br>
+</li>
+<li><strong>View Restriction</strong>- Define per each download if it is open to non logged in users. If only logged in user are allowed also define which user roles can view download. This can be set by Admin or Admin can give user ability to define (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM91.png">View image</a>) </Li>
+<li><strong>Password Protection</strong>- Protect download with password (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-33-08.jpg">View Image</a>), (<a href="http://www.cminds.com/cmdownloads/cm-downloads-pro/" target="_blank">View Demo</a>)</li>
+<li><strong>Upload Restrictions</strong>- Define which user roles can create new downloads (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-39-35.jpg">View Image</a>)</Li>
+<li><strong>URL / Shortcode</strong>- Allow to include URL or shortcode in download page instead of uploading a file. This is useful for integration with other plugins and support checkout carts and selling downloads. (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-41-44.jpg">Example of EDD integration</a>) , (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-44-14.jpg">Example of User Selection</a>), (<a href="http://www.cminds.com/cmdownloads/cm-answers-pro/" target="_blank">View Demo</a>)</Li>
+<li><strong>Related Downloads</strong>- Show Related downloads in download page (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-45-53.jpg">View Image</a>), (<a href="http://www.cminds.com/cmdownloads/cm-answers-pro/" target="_blank">View Demo</a>)</li>
+<li><strong>Downloads Page Tabs</strong>- Show more tabs for download descriptions in download page, (<a href="http://www.cminds.com/cmdownloads/cm-answers-pro/" target="_blank">View Demo</a>)</Li>
+<li><strong>Search</strong>- Filter search results by date, downloads and username&nbsp;(<a href="http://www.cminds.com/cmdownloads/" target="_blank">View Demo</a>)</li>
 <li><strong>Moderate User Comments</strong>- Admin can moderate user comments (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-47-33.jpg">View Image</a>)</li>
 <li><strong>Auto-approve comments and answers from users</strong>- Admin can define a list of users which do not need moderation (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-47-33.jpg">View Image</a>)</li>
 <li><strong>Multisite</strong>- Supports multisite</li>
@@ -23,9 +29,8 @@ This plugin adds many more features and functionality to <a title="CM Downloads"
 <li><strong>Gravatar</strong> - Ability to show Gravatar near user name and in user profile (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-49-22.jpg">View Image</a>)</li>
 <li><strong>Order Comments</strong> - Show comments in download page in ascending or descending order</li>
 <li><strong>Localization Support</strong> - Forntend (user side) is localized</li>
-<li><strong>View Count Control</strong> - Control how view count is done (by view or by session)</li>
+<li><strong>View Count</strong> - Show view count in each download page and Control how view count is done (by view or by session)</li>
 <li><strong>Gratitude Message</strong> - Does not include Gratitude message in the footer.</li>
-
 </ul>
 
 <h1><strong>Purchase </strong></h1>
