Add  user guide
git-svn-id: https://plugins.svn.wordpress.org/cm-download-manager/trunk@743801 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/views/backend/pro.phtml
+++ b/views/backend/pro.phtml
@@ -11,7 +11,7 @@ This plugin adds many more features and functionality to <a title="CM Downloads"
 <li><strong>Shortcodes/Widgets</strong>- Generate top contributors, recent updates and most download items list<br />
 <br><br />
 Top Downloads - CMDM-top-downloads count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM95.png" target="new">View Image</a>)<br><br />
-Frequent Contributers - CMDM-frequent-contributors count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM96.png" target="new">View Image</a>)<br><br />
+Frequent Contributors - CMDM-frequent-contributors count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM96.png" target="new">View Image</a>)<br><br />
 Recent Added Downloads - CMDM-recent-updates count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM98.png" target="new">View Image</a>)<br><br />
 Related Downloads - CMDM-related-downloads count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM97.png" target="new">View Image</a>)<br>
 </li>
