--- a/views/backend/pro.phtml
+++ b/views/backend/pro.phtml
@@ -31,7 +31,10 @@ Related Downloads - CMDM-related-downloads count="5"&nbsp;"&nbsp; (<a href="http
 <li><strong>Localization Support</strong> - Forntend (user side) is localized</li>
 <li><strong>View Count</strong> - Show view count in each download page and Control how view count is done (by view or by session)</li>
 <li><strong>Gratitude Message</strong> - Does not include Gratitude message in the footer.</li>
-</ul>
+<li><strong>Permalinks</strong> - Ability to change permalink from /cmdownloads to user defined.</li>
+<li><strong>Support Tab</strong> - Ability to remove support forum.</li>
+<li><strong>Slide Show</strong> - Ability to turn off slide show.</li>
+</ul></ul>
 
 <h1><strong>Purchase </strong></h1>
 <p>The Pro version is only $25. You can purchase the pro version from <a href="http://www.cminds.com/downloads/cm-download-manager-pro/">Here</a></p>
