--- a/views/backend/pro.phtml
+++ b/views/backend/pro.phtml
@@ -11,9 +11,9 @@ This plugin adds many more features and functionality to <a title="CM Downloads"
 <li><strong>Shortcodes/Widgets</strong>- Generate top contributors, recent updates and most download items list<br />
 <br><br />
 Top Downloads - CMDM-top-downloads count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM95.png" target="new">View Image</a>)<br><br />
-Frequent Contributors - CMDM-frequent-contributors count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM96.png" target="new">View Image</a>)<br><br />
-Recent Added Downloads - CMDM-recent-updates count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM98.png" target="new">View Image</a>)<br><br />
-Related Downloads - CMDM-related-downloads count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM97.png" target="new">View Image</a>)<br>
+Frequent Contributors - CMDM-frequent-contributors  Cat="category-name" sort="Asc/Desc" count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM96.png" target="new">View Image</a>)<br><br />
+Downloads List - CMDM-downloads-list Cat="category-name" sort="Asc/Desc" count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM98.png" target="new">View Image</a>)<br><br />
+Related Downloads - CMDM-related-downloads  Cat="category-name" sort="Asc/Desc" count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM97.png" target="new">View Image</a>)<br>
 </li>
 <li><strong>View Restriction</strong>- Define per each download if it is open to non logged in users. If only logged in user are allowed also define which user roles can view download. This can be set by Admin or Admin can give user ability to define (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM91.png">View image</a>) </Li>
 <li><strong>Password Protection</strong>- Protect download with password (<a href="http://www.cminds.com/wp-content/uploads/edd/22-06-2013-22-33-08.jpg">View Image</a>), (<a href="http://www.cminds.com/cmdownloads/cm-downloads-pro/" target="_blank">View Demo</a>)</li>
@@ -34,7 +34,8 @@ Related Downloads - CMDM-related-downloads count="5"&nbsp;"&nbsp; (<a href="http
 <li><strong>Permalinks</strong> - Ability to change permalink from /cmdownloads to user defined.</li>
 <li><strong>Support Tab</strong> - Ability to remove support forum.</li>
 <li><strong>Slide Show</strong> - Ability to turn off slide show.</li>
-</ul></ul>
+<li><strong>Disclaimer</strong> - Add option to show disclaimer for first time users.</li>
+</ul>
 
 <h1><strong>Purchase </strong></h1>
 <p>The Pro version is only $25. You can purchase the pro version from <a href="http://www.cminds.com/downloads/cm-download-manager-pro/">Here</a></p>
