--- a/views/backend/pro.phtml
+++ b/views/backend/pro.phtml
@@ -12,7 +12,7 @@ This plugin adds many more features and functionality to <a title="CM Downloads"
 <br><br />
 Top Downloads - CMDM-top-downloads count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM95.png" target="new">View Image</a>)<br><br />
 Frequent Contributors - CMDM-frequent-contributors  Cat="category-name" sort="Asc/Desc" count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM96.png" target="new">View Image</a>)<br><br />
-Downloads List - CMDM-downloads-list Cat="category-name" sort="Asc/Desc" count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM98.png" target="new">View Image</a>)<br><br />
+Downloads List- CMDM-downloads-list Cat="category-name" sort="Asc/Desc" count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM98.png" target="new">View Image</a>)<br><br />
 Related Downloads - CMDM-related-downloads  Cat="category-name" sort="Asc/Desc" count="5"&nbsp;"&nbsp; (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM97.png" target="new">View Image</a>)<br>
 </li>
 <li><strong>View Restriction</strong>- Define per each download if it is open to non logged in users. If only logged in user are allowed also define which user roles can view download. This can be set by Admin or Admin can give user ability to define (<a href="http://www.cminds.com/wp-content/uploads/cmdm/CMDM91.png">View image</a>) </Li>
@@ -32,9 +32,11 @@ Related Downloads - CMDM-related-downloads  Cat="category-name" sort="Asc/Desc" 
 <li><strong>View Count</strong> - Show view count in each download page and Control how view count is done (by view or by session)</li>
 <li><strong>Gratitude Message</strong> - Does not include Gratitude message in the footer.</li>
 <li><strong>Permalinks</strong> - Ability to change permalink from /cmdownloads to user defined.</li>
-<li><strong>Support Tab</strong> - Ability to remove support forum.</li>
+<li><strong>Support and Tabs control</strong> - Ability to remove support forum and also other tabs from download page.</li>
 <li><strong>Slide Show</strong> - Ability to turn off slide show.</li>
 <li><strong>Disclaimer</strong> - Add option to show disclaimer for first time users.</li>
+<li><strong>External Viewer</strong> - Added external link to Google Docs viewer for supported Google Docs document types .  (<a href="http://www.cminds.com/cmdownloads/pdf-file-preview-example/">View Demo</a>)</li>
+<li><strong>MP3 Viewer</strong> - Added embedded mp3 player for music files. (<a href="http://www.cminds.com/cmdownloads/mp3-audio-example/">View Demo</a>)</li>
 </ul>
 
 <h1><strong>Purchase </strong></h1>
