--- a/views/backend/pro.phtml
+++ b/views/backend/pro.phtml
@@ -1,9 +1,9 @@
 <p class="clear">
 <br />
 <h1><strong>CM Download Manager Pro </strong></h1>
- <p><strong>A Pro version of CM Downloads is <a href="http://www.cminds.com/downloads/cm-download-manager-pro/"  target="new">available here</a></strong></p>
- <p>CM Download Manager Pro is a Premium version of <a title="CM Downloads" href="http://www.cminds.com/plugins/cm-downloads/" target="new">CM Download</a></p>
-This plugin adds many more features and functionality to <a title="CM Downloads" href="http://www.cminds.com/plugins/cm-downloads/" target="new">CM Downloads Plugin</a>, giving the admin better tools to customize the Downloads system behavior, adding login support from social networks, adding password protection support and a lot more.
+ <p><strong>A Pro version of CM Downloads is <a href="http://downloadsmanager.cminds.com"  target="new">available here</a></strong></p>
+ <p>CM Download Manager Pro is a Premium version of <a title="CM Downloads" href="http://downloadsmanager.cminds.com" target="new">CM Download</a></p>
+This plugin adds many more features and functionality to <a title="CM Downloads" href="http://downloadsmanager.cminds.com" target="new">CM Downloads Plugin</a>, giving the admin better tools to customize the Downloads system behavior, adding login support from social networks, adding password protection support and a lot more.
 <h2>Features (Pro Version Only)</h2>
 <!--TODO-->
 <ul>
@@ -40,7 +40,7 @@ Related Downloads - CMDM-related-downloads  Cat="category-name" sort="Asc/Desc" 
 </ul>
 
 <h1><strong>Purchase </strong></h1>
-<p>The Pro version is only $25. You can purchase the pro version from <a href="http://www.cminds.com/downloads/cm-download-manager-pro/">Here</a></p>
+<p>The Pro version is only $25. You can purchase the pro version from <a href="http://downloadsmanager.cminds.com">Here</a></p>
 
 
 </p>
