--- a/views/frontend/cmdownload/index.phtml
+++ b/views/frontend/cmdownload/index.phtml
@@ -108,6 +108,6 @@ get_header();
     </div>
     <!--/main --> 
 </div>
-<span class="cma_poweredby"><a href="http://www.cminds.com/" target="_new" class="cma_poweredbylink">CreativeMinds WordPress Plugin</a> <a href="http://www.cminds.com/plugins/cm-downloads/" target="_new" class="cma_poweredbylink">CM Downloads Manager</a></span>
+<span class="cma_poweredby"><a href="http://plugins.cminds.com/" target="_new" class="cma_poweredbylink">CreativeMinds WordPress Plugins</a> <a href="http://downloadsmanager.cminds.com" target="_new" class="cma_poweredbylink">CM Downloads Manager</a></span>
 </div>
 <?php get_footer(); ?>
