--- a/views/backend/settings.phtml
+++ b/views/backend/settings.phtml
@@ -10,7 +10,7 @@ endif;
 <table>
 	<tr>
     <td style="min-width:200px;"><strong>Pro Version</strong></td>
- 	<td style="min-width:200px;"><p><strong><a href="http://www.cminds.com/downloads/cm-download-manager-pro/" target="new">Upgrade</a></p></td>
+ 	<td style="min-width:200px;"><p><strong><a href="http://downloadsmanager.cminds.com" target="new">Upgrade</a></p></td>
     <td bgcolor="#CCFFCC"> Professional version of CM Downloads which gives the admin better tools to customize the Downloads system behavior, adding login support from social networks, password protection and a lot more</td>
 	</tr>
 	</table>
