--- a/views/frontend/cmdownload/thread.phtml
+++ b/views/frontend/cmdownload/thread.phtml
@@ -143,7 +143,7 @@ if (have_posts()):
         endwhile;
     endif;
     ?>
-	<span class="cma_poweredby"><a href="http://www.cminds.com/" target="_new" class="cma_poweredbylink">CreativeMinds WordPress Plugin</a> <a href="http://www.cminds.com/plugins/cm-downloads/" target="_new" class="cma_poweredbylink">CM Downloads Manager</a></span>
+	<span class="cma_poweredby"><a href="http://plugins.cminds.com/" target="_new" class="cma_poweredbylink">CreativeMinds WordPress Plugins</a> <a href="http://downloadsmanager.cminds.com" target="_new" class="cma_poweredbylink">CM Downloads Manager</a></span>
 </div>
 <?php
 get_footer();
